--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -11,21 +11,37 @@
     "generate-types": "npx supabase gen types typescript --project-id quqkoacpcuegovmfsddg --schema public > src/lib/database.types.ts"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/supabase-js": "^2.39.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.4.2",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.16.7",
+    "@mui/system": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.1",
+    "@supabase/auth-ui-react": "^0.4.5",
+    "@supabase/auth-ui-shared": "^0.1.7",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.13",
+    "lucide-react": "^0.441.0",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^2.0.0",
-    "zustand": "^5.0.5"
+    "postcss": "^8.4.31",
+    "react-chartjs-2": "^5.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-swipeable": "^7.0.1",
+    "tailwindcss": "3.3.3",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^15.0.0",
